[package]
name = "semtech_radios"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "^1.0.1"

hal = { package = "stm32-hal2", version = "^1.9.0", optional = true }

[features]
g4 = ["hal/g431"]
wl = ["hal/wle5"]
